docs: minor fixes

--- a/docs/10_stm32f0.md
+++ b/docs/10_stm32f0.md
@@ -18,7 +18,7 @@ STM32F0 USB Development Board
 **Resources:**
 
 - [Schematic (PDF)](@@/p/stm32-usbd-devboards/kicad/stm32f0-usbd-devboard_20250412_sch.pdf)
-- [Interactive BoM](@@/p/stm32-usbd-devboards/kicad/stm32f0-usbd-devboard_20250412_ibom.html)
+- [Interactive BOM](@@/p/stm32-usbd-devboards/kicad/stm32f0-usbd-devboard_20250412_ibom.html)
 - [Gerber files](@@/p/stm32-usbd-devboards/kicad/stm32f0-usbd-devboard_20250412_gerber.zip)
 
 ## Supported Microcontrollers
@@ -109,5 +109,5 @@ STM32F0 USB Development Board (revision 20241212)
 **Resources:**
 
 - [Schematic (PDF)](@@/p/stm32-usbd-devboards/kicad/stm32f0-usbd-devboard_20241212_sch.pdf)
-- [Interactive BoM](@@/p/stm32-usbd-devboards/kicad/stm32f0-usbd-devboard_20241212_ibom.html)
+- [Interactive BOM](@@/p/stm32-usbd-devboards/kicad/stm32f0-usbd-devboard_20241212_ibom.html)
 - [Gerber files](@@/p/stm32-usbd-devboards/kicad/stm32f0-usbd-devboard_20241212_gerber.zip)
