--- a/docs/20_stm32g4.md
+++ b/docs/20_stm32g4.md
@@ -16,7 +16,7 @@ STM32G4 USB Development Board
 **Resources:**
 
 - [Schematic (PDF)](@@/p/stm32-usbd-devboards/kicad/stm32g4-usbd-devboard_20250412_sch.pdf)
-- [Interactive BoM](@@/p/stm32-usbd-devboards/kicad/stm32g4-usbd-devboard_20250412_ibom.html)
+- [Interactive BOM](@@/p/stm32-usbd-devboards/kicad/stm32g4-usbd-devboard_20250412_ibom.html)
 - [Gerber files](@@/p/stm32-usbd-devboards/kicad/stm32g4-usbd-devboard_20250412_gerber.zip)
 
 ## Supported Microcontrollers
@@ -108,5 +108,5 @@ STM32G4 USB Development Board (revision 20250402)
 **Resources:**
 
 - [Schematic (PDF)](@@/p/stm32-usbd-devboards/kicad/stm32g4-usbd-devboard_20250402_sch.pdf)
-- [Interactive BoM](@@/p/stm32-usbd-devboards/kicad/stm32g4-usbd-devboard_20250402_ibom.html)
+- [Interactive BOM](@@/p/stm32-usbd-devboards/kicad/stm32g4-usbd-devboard_20250402_ibom.html)
 - [Gerber files](@@/p/stm32-usbd-devboards/kicad/stm32g4-usbd-devboard_20250402_gerber.zip)
