--- a/docs/30_stm32c0.md
+++ b/docs/30_stm32c0.md
@@ -16,7 +16,7 @@ STM32C0 USB Development Board
 **Resources:**
 
 - [Schematic (PDF)](@@/p/stm32-usbd-devboards/kicad/stm32c0-usbd-devboard_20251110_sch.pdf)
-- [Interactive BoM](@@/p/stm32-usbd-devboards/kicad/stm32c0-usbd-devboard_20251110_ibom.html)
+- [Interactive BOM](@@/p/stm32-usbd-devboards/kicad/stm32c0-usbd-devboard_20251110_ibom.html)
 - [Gerber files](@@/p/stm32-usbd-devboards/kicad/stm32c0-usbd-devboard_20251110_gerber.zip)
 
 ## Supported Microcontrollers
@@ -82,6 +82,6 @@ For the complete build process, see the generic [Hardware Build Manual](@@/hardw
 
 ## Firmware Development
 
-For project setup, build system configuration, toolchain usage, and flashing instructions, refer to the [cmake-cmsis-stm32 documentation](@@/p/cmake-cmsis-stm32/). The CMSIS device identifier for this board is `STM32C071xx` (see the [Supported Microcontrollers](#supported-microcontrollers) table above).
+For project setup, build system configuration, toolchain usage, and flashing instructions, refer to the [cmake-cmsis-stm32 documentation](@@/p/cmake-cmsis-stm32/). The CMSIS device identifier for this board is `STM32C071xx`.
 
 For register-level details on clock configuration, CRS, USB peripheral, and GPIO, refer to the [STM32C0 reference manual](https://www.st.com/resource/en/reference_manual/rm0490-stm32c0-series-advanced-armbased-32bit-mcus-stmicroelectronics.pdf).
