--- a/docs/20_stm32g4.md
+++ b/docs/20_stm32g4.md
@@ -96,7 +96,9 @@ For the complete build process, see the generic [Hardware Build Manual](@@/hardw
 
 ## Firmware Development
 
-For project setup, build system configuration, toolchain usage, and flashing instructions, refer to the [cmake-cmsis-stm32 documentation](@@/p/cmake-cmsis-stm32/). For register-level details on peripherals, clocking, and CRS configuration, see the [STM32G4 reference manual (RM0440)](https://www.st.com/resource/en/reference_manual/rm0440-stm32g4-series-advanced-armbased-32bit-mcus-stmicroelectronics.pdf).
+For project setup, build system configuration, toolchain usage, and flashing instructions, refer to the [cmake-cmsis-stm32 documentation](@@/p/cmake-cmsis-stm32/). The CMSIS device identifier for this board is `STM32G431xx`.
+
+For register-level details on peripherals, clocking, and CRS configuration, refer to the [STM32G4 reference manual (RM0440)](https://www.st.com/resource/en/reference_manual/rm0440-stm32g4-series-advanced-armbased-32bit-mcus-stmicroelectronics.pdf).
 
 ## Legacy Revision: 20250402
 
