--- a/docs/30_stm32c0.md
+++ b/docs/30_stm32c0.md
@@ -21,9 +21,11 @@ STM32C0 USB Development Board
 
 ## Supported Microcontrollers
 
-| Part Number | CMSIS Device | Flash | RAM |
-|---|---|---|---|
-| STM32C071K8T6 | `STM32C071xx` | 64 KB | 24 KB |
+The board uses the CMSIS device identifier `STM32C071xx`.
+
+| Part Number | Flash | RAM |
+|---|---|---|
+| STM32C071K8T6 | 64 KB | 24 KB |
 
 ## Pinout
 
@@ -84,4 +86,4 @@ For the complete build process, see the generic [Hardware Build Manual](@@/hardw
 
 For project setup, build system configuration, toolchain usage, and flashing instructions, refer to the [cmake-cmsis-stm32 documentation](@@/p/cmake-cmsis-stm32/). The CMSIS device identifier for this board is `STM32C071xx`.
 
-For register-level details on clock configuration, CRS, USB peripheral, and GPIO, refer to the [STM32C0 reference manual](https://www.st.com/resource/en/reference_manual/rm0490-stm32c0-series-advanced-armbased-32bit-mcus-stmicroelectronics.pdf).
+For register-level details on clock configuration, CRS, USB peripheral, and GPIO, refer to the [STM32C0 reference manual (RM0490)](https://www.st.com/resource/en/reference_manual/rm0490-stm32c0-series-advanced-armbased-32bit-mcus-stmicroelectronics.pdf).
