--- a/docs/10_stm32f0.md
+++ b/docs/10_stm32f0.md
@@ -10,7 +10,7 @@ Development board for the STM32F042K4T6/K6T6 (ARM Cortex-M0, 48 MHz) in LQFP-32 
 
 The STM32F042 integrates an HSI48 internal oscillator that is automatically calibrated by the USB host through SOF packets, enabling crystal-free USB device operation. When no HSE crystal is installed, the two crystal pins (PF0, PF1) can be repurposed as GPIO by closing solder bridges JP1 and JP2.
 
-## Current Revision (20250412)
+## Current revision (20250412)
 
 ![STM32F0 USB Development Board](@@/p/stm32-usbd-devboards/kicad/stm32f0-usbd-devboard_20250412_1080.png)
 STM32F0 USB Development Board
@@ -19,13 +19,15 @@ STM32F0 USB Development Board
 
 - [Schematic (PDF)](@@/p/stm32-usbd-devboards/kicad/stm32f0-usbd-devboard_20250412_sch.pdf)
 - [Interactive BOM](@@/p/stm32-usbd-devboards/kicad/stm32f0-usbd-devboard_20250412_ibom.html)
-- [Gerber files](@@/p/stm32-usbd-devboards/kicad/stm32f0-usbd-devboard_20250412_gerber.zip)
+- [Gerber files (ZIP)](@@/p/stm32-usbd-devboards/kicad/stm32f0-usbd-devboard_20250412_gerber.zip)
 
-## Supported Microcontrollers
+KiCad source files are available in the repository under `pcb/stm32f0-usbd-devboard/`.
+
+## Supported microcontrollers
 
 Both parts share the CMSIS device identifier `STM32F042x6` and differ only in flash size.
 
-| Part Number | Flash | RAM |
+| Part number | Flash | RAM |
 |---|---|---|
 | STM32F042K4T6 | 16 KB | 6 KB |
 | STM32F042K6T6 | 32 KB | 6 KB |
@@ -64,7 +66,7 @@ The STM32F042 supports two clock sources for USB operation at 48 MHz:
 
 The maximum system clock frequency is 48 MHz regardless of clock source.
 
-## SWD and DFU Bootloader
+## SWD and DFU bootloader
 
 **SWD header (J2)** -- 5-pin vertical header. Signals: 3V3, SWCLK, GND, SWDIO, NRST.
 
@@ -80,7 +82,7 @@ The maximum system clock frequency is 48 MHz regardless of clock source.
 
 For flashing instructions, refer to the generic [Hardware Build Manual](@@/hardware/build-manual/).
 
-## Board-Specific Build Notes
+## Board-specific build notes
 
 - **HSE crystal (Y1)**: Optional. 8 MHz, HC49 package. Only install if HSE is required for your application.
 - **Solder bridges JP1/JP2**: Open by default. Close only if the HSE crystal is **not** installed, to route PF0/PF1 to the header pins.
@@ -88,13 +90,13 @@ For flashing instructions, refer to the generic [Hardware Build Manual](@@/hardw
 
 For the complete build process, see the generic [Hardware Build Manual](@@/hardware/build-manual/).
 
-## Firmware Development
+## Firmware development
 
 For project setup, build system configuration, toolchain usage, and flashing instructions, refer to the [cmake-cmsis-stm32 documentation](@@/p/cmake-cmsis-stm32/). The CMSIS device identifier for this board is `STM32F042x6`.
 
 For register-level details on clock configuration, CRS, USB peripheral, and all other on-chip peripherals, refer to the [STM32F0x1/F0x2/F0x8 reference manual (RM0091)](https://www.st.com/resource/en/reference_manual/rm0091-stm32f0x1stm32f0x2stm32f0x8-advanced-armbased-32bit-mcus-stmicroelectronics.pdf).
 
-## Legacy Revision: 20241212
+## Legacy revision: 20241212
 
 This was the first revision of the STM32F0 board. Compared to the current revision (20250412):
 
@@ -110,4 +112,4 @@ STM32F0 USB Development Board (revision 20241212)
 
 - [Schematic (PDF)](@@/p/stm32-usbd-devboards/kicad/stm32f0-usbd-devboard_20241212_sch.pdf)
 - [Interactive BOM](@@/p/stm32-usbd-devboards/kicad/stm32f0-usbd-devboard_20241212_ibom.html)
-- [Gerber files](@@/p/stm32-usbd-devboards/kicad/stm32f0-usbd-devboard_20241212_gerber.zip)
+- [Gerber files (ZIP)](@@/p/stm32-usbd-devboards/kicad/stm32f0-usbd-devboard_20241212_gerber.zip)
