--- a/docs/20_stm32g4.md
+++ b/docs/20_stm32g4.md
@@ -8,7 +8,7 @@
 
 The STM32G4 variant is based on the STM32G431K6T6/K8T6/KBT6 (ARM Cortex-M4 with single-precision FPU, 170 MHz). It provides significantly more processing power than the [F0](10_stm32f0.md) and [C0](30_stm32c0.md) variants, with up to 128 KB of flash and hardware floating-point support.
 
-## Current Revision (20250412)
+## Current revision (20250412)
 
 ![STM32G4 USB Development Board](@@/p/stm32-usbd-devboards/kicad/stm32g4-usbd-devboard_20250412_1080.png)
 STM32G4 USB Development Board
@@ -17,13 +17,15 @@ STM32G4 USB Development Board
 
 - [Schematic (PDF)](@@/p/stm32-usbd-devboards/kicad/stm32g4-usbd-devboard_20250412_sch.pdf)
 - [Interactive BOM](@@/p/stm32-usbd-devboards/kicad/stm32g4-usbd-devboard_20250412_ibom.html)
-- [Gerber files](@@/p/stm32-usbd-devboards/kicad/stm32g4-usbd-devboard_20250412_gerber.zip)
+- [Gerber files (ZIP)](@@/p/stm32-usbd-devboards/kicad/stm32g4-usbd-devboard_20250412_gerber.zip)
 
-## Supported Microcontrollers
+KiCad source files are available in the repository under `pcb/stm32g4-usbd-devboard/`.
+
+## Supported microcontrollers
 
 All three parts share the same LQFP-32 package and pinout, differing only in flash size. They use the CMSIS device identifier `STM32G431xx`.
 
-| Part Number | Flash | RAM |
+| Part number | Flash | RAM |
 |---|---|---|
 | STM32G431K6T6 | 32 KB | 32 KB |
 | STM32G431K8T6 | 64 KB | 32 KB |
@@ -57,7 +59,7 @@ However, unlike on the F0 and C0, HSI48 cannot be used as the system clock or as
 
 The optional 24 MHz HSE crystal (Y1) provides a stable, accurate clock reference for the system and is recommended. When installed, the PLL can derive both the system clock and a 48 MHz USB clock from the HSE input, and HSI48 is not needed.
 
-## Power Filtering
+## Power filtering
 
 Ferrite bead FB1 (600 ohm @ 100 MHz, 0603 SMD) is placed on the analog/USB power rail for noise filtering.
 
@@ -66,7 +68,7 @@ Solder bridge JP1 ("No FB1") can be closed to bypass FB1 if the ferrite bead is 
 > [!NOTE]
 > This power filtering arrangement is unique to the G4 variant.
 
-## SWD, SWO, and DFU Bootloader
+## SWD, SWO, and DFU bootloader
 
 **SWD header (J2)** -- 6-pin horizontal header with the following signals:
 
@@ -85,7 +87,7 @@ SWO (Serial Wire Output) on PB3 provides trace output, enabling ITM-based printf
 
 For flashing instructions, refer to the generic [Hardware Build Manual](@@/hardware/build-manual/).
 
-## Board-Specific Build Notes
+## Board-specific build notes
 
 - **HSE crystal (Y1)**: 24 MHz, HC49 package. Optional, but recommended -- provides a more accurate clock reference for the system clock. Without it, USB still works via HSI48 with CRS, but HSI48 **cannot** be used as the system clock.
 - **Ferrite bead (FB1)**: 600 ohm @ 100 MHz, 0603 SMD. Recommended for mixed-signal applications. Can be bypassed by closing JP1.
@@ -94,13 +96,13 @@ For flashing instructions, refer to the generic [Hardware Build Manual](@@/hardw
 
 For the complete build process, see the generic [Hardware Build Manual](@@/hardware/build-manual/).
 
-## Firmware Development
+## Firmware development
 
 For project setup, build system configuration, toolchain usage, and flashing instructions, refer to the [cmake-cmsis-stm32 documentation](@@/p/cmake-cmsis-stm32/). The CMSIS device identifier for this board is `STM32G431xx`.
 
 For register-level details on peripherals, clocking, and CRS configuration, refer to the [STM32G4 reference manual (RM0440)](https://www.st.com/resource/en/reference_manual/rm0440-stm32g4-series-advanced-armbased-32bit-mcus-stmicroelectronics.pdf).
 
-## Legacy Revision: 20250402
+## Legacy revision: 20250402
 
 This revision is nearly identical to the current one (20250412), with only minor fixes. The pinout, components, and functionality are the same.
 
@@ -111,4 +113,4 @@ STM32G4 USB Development Board (revision 20250402)
 
 - [Schematic (PDF)](@@/p/stm32-usbd-devboards/kicad/stm32g4-usbd-devboard_20250402_sch.pdf)
 - [Interactive BOM](@@/p/stm32-usbd-devboards/kicad/stm32g4-usbd-devboard_20250402_ibom.html)
-- [Gerber files](@@/p/stm32-usbd-devboards/kicad/stm32g4-usbd-devboard_20250402_gerber.zip)
+- [Gerber files (ZIP)](@@/p/stm32-usbd-devboards/kicad/stm32g4-usbd-devboard_20250402_gerber.zip)
