--- a/docs/30_stm32c0.md
+++ b/docs/30_stm32c0.md
@@ -8,7 +8,7 @@
 
 The STM32C0 variant is based on the STM32C071K8T6 (ARM Cortex-M0+, 48 MHz) -- the newest addition to the lineup. Like the [STM32F0 variant](10_stm32f0.md), it runs crystal-free using the HSIUSB48 internal oscillator self-calibrated via USB SOF packets, with an optional HSE crystal footprint on the board. The Cortex-M0+ core offers improved power efficiency over the Cortex-M0 in the F0, and this variant provides the largest pin count of the three boards with 2x14 headers exposing 28 GPIO + power pins.
 
-## Current Revision (20251110)
+## Current revision (20251110)
 
 ![STM32C0 USB Development Board](@@/p/stm32-usbd-devboards/kicad/stm32c0-usbd-devboard_20251110_1080.png)
 STM32C0 USB Development Board
@@ -17,13 +17,15 @@ STM32C0 USB Development Board
 
 - [Schematic (PDF)](@@/p/stm32-usbd-devboards/kicad/stm32c0-usbd-devboard_20251110_sch.pdf)
 - [Interactive BOM](@@/p/stm32-usbd-devboards/kicad/stm32c0-usbd-devboard_20251110_ibom.html)
-- [Gerber files](@@/p/stm32-usbd-devboards/kicad/stm32c0-usbd-devboard_20251110_gerber.zip)
+- [Gerber files (ZIP)](@@/p/stm32-usbd-devboards/kicad/stm32c0-usbd-devboard_20251110_gerber.zip)
 
-## Supported Microcontrollers
+KiCad source files are available in the repository under `pcb/stm32c0-usbd-devboard/`.
+
+## Supported microcontrollers
 
 The board uses the CMSIS device identifier `STM32C071xx`.
 
-| Part Number | Flash | RAM |
+| Part number | Flash | RAM |
 |---|---|---|
 | STM32C071K8T6 | 64 KB | 24 KB |
 
@@ -59,7 +61,7 @@ An optional 48 MHz HSE crystal (Y1, HC49 package) can be installed if HSE is req
 
 The maximum system clock frequency is 48 MHz.
 
-## SWD and DFU Bootloader
+## SWD and DFU bootloader
 
 The C0 variant uses a combined SWD + Bootloader header (J2) -- a single 5-pin vertical header that consolidates the separate SWD and bootloader headers found on the [F0](10_stm32f0.md) and [G4](20_stm32g4.md) variants.
 
@@ -74,7 +76,7 @@ The C0 variant uses a combined SWD + Bootloader header (J2) -- a single 5-pin ve
 > [!NOTE]
 > On STM32C0 devices, the BOOT0 pin behavior needs to be configured via option bytes according to the [STM32: Enable Legacy Boot](@@/hardware/stm32-enable-legacy-boot/) document. Refer to the STM32C0 reference manual and the generic [Hardware Build Manual](@@/hardware/build-manual/) for details on USB DFU flashing.
 
-## Board-Specific Build Notes
+## Board-specific build notes
 
 - **HSE crystal (Y1)**: Optional. 48 MHz, HC49 package. Only install if HSE is required.
 - **Solder bridges JP1/JP2**: Open by default. Close only if the HSE crystal is **not** installed, to route PC14/PC15 to the header pins.
@@ -82,7 +84,7 @@ The C0 variant uses a combined SWD + Bootloader header (J2) -- a single 5-pin ve
 
 For the complete build process, see the generic [Hardware Build Manual](@@/hardware/build-manual/).
 
-## Firmware Development
+## Firmware development
 
 For project setup, build system configuration, toolchain usage, and flashing instructions, refer to the [cmake-cmsis-stm32 documentation](@@/p/cmake-cmsis-stm32/). The CMSIS device identifier for this board is `STM32C071xx`.
 
